# ml_prod

./: Makefile  README.md  pyproject.toml
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
src/: runner.py
src/config/: .env  config.py
src/database/: db_model.py
src/model/: model_service.py
src/model/pipeline/: collection.py  model.py  preperation.py
