[tool.poetry]
name = "ml-prod"
version = "0.1.0"
description = ""
authors = ["Monu Dixit <monudixit0007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
pendulum = "^3.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.2"
sqlalchemy = "^2.0.35"
pydantic-settings = "^2.6.1"
loguru = "^0.7.2"
flake8 = "^7.1.1"
make = "^0.1.6.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
